--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="keywords" content="HTML, CSS, XML, Javascript"/>
 		<meta author="me"/>
-		<meta description="Tables with errors data"/>
+		<meta description="table with detailed error data"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
